LIST OF CHANGES
---------------

 - function creating definitions for autoqc jobs - when evaluating
   whether the autoqc check should be run:
     reduce run time by passing to the autoqc class instance,
     where appropriate, a lims object and fastq reference path;
     explicitly pass product_conf_file_path to this instance 
 - iRODS archival of non-products is driven by settings of products,
   i.e if all products in the lane should not be archived to iRODS,
   non-products (tag zero and spiked PhiX tag) will not be archived
   either
 - remove the old warehouse loader from the analysis function graph 
 - remove function for illumina qc analysis archival (old way of
   saving InterOp data to QC database)

release 57.7.0
 - cluster count check and p4stage1 functions use new class
   (npg_qc::illumina::interop::parser) to parse Illumina InterOp files
 - change npg_pipeline::product::release to use tertiary config
 - new qc_interop function to run interop autoqc check
 - simplification of the analysis function graph: number of mlwh
   updates is reduced to two, one after stage 1 and interop autoqc
   check and another towards the end of the flow

release 57.6.0
 - only set p4 parameter values for markdup_method and
   markdup_optical_distance_value when do_target_alignment is true;
   this also stops an error being thrown if the entity (for example,
   tag zero product) has multiple studies and references
 - fix haplotype caller check for a PCR free library type to be case
   insensitive
 - increase memory for bqsr and haplotype caller jobs
 - make test CRAM files compliant with samtools v.1.10.0,
   which gives an error if no header is present in a file

release 57.5.1
 - bug fix - correct node id in splice (for GbS) 

release 57.5.0
 - add BWA MEM2 support to seq_alignment function
 - bug fix: add -f to rm command removing intermediate files (to
     avoid error when no intermediate files are present)